fixed productsStatus image show z-index problem

--- a/styles/main.css
+++ b/styles/main.css
@@ -736,6 +736,10 @@ video {
   z-index: 40;
 }
 
+.z-\[100\] {
+  z-index: 100;
+}
+
 .z-\[11\] {
   z-index: 11;
 }
